--- a/src/views/realtimeproducts.handlebars
+++ b/src/views/realtimeproducts.handlebars
@@ -2,7 +2,7 @@
     <h1 class="text-center">Real time Products</h1>
 
     <div class="d-flex justify-content-between my-4">
-        <a href="/" class="btn btn-primary">Home</a>
+        <a href="/home" class="btn btn-primary">Home</a>
     </div>
 
     <div class="row">
