--- a/src/views/bienv.handlebars
+++ b/src/views/bienv.handlebars
@@ -11,7 +11,7 @@
         <h1>Bienvenido, {{usuario}}</h1>
 
         <div class="d-flex justify-content-center mt-4">
-            <a href="/home" class="btn btn-primary me-3">Continuar al eCommerce</a>
+            <a href="/home" class="btn btn-primary me-3">Deli-Market</a>
             <form action="/api/sessions/logout" method="POST">
                 <button type="submit" class="btn btn-danger">Cerrar sesión</button>
             </form>
