--- a/src/views/realtimeproducts.handlebars
+++ b/src/views/realtimeproducts.handlebars
@@ -45,4 +45,4 @@
 </div>
 
 <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
